<resources>
    <string name="app_name">CalculatorWithGrid</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="div">/</string>
    <string name="mult">*</string>
    <string name="minus">-</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="enter_first_operand">Enter first operand please</string>
    <string name="you_have_begun_entering_second">You have begun entering second operant already</string>
    <string name="reset">reset</string>
    <string name="plus">+</string>
    <string name="enter_both_operands_and_operation">Enter both operands and operation</string>
    <string name="calculator">Calculator</string>
    <string name="exit">Exit</string>
    <string name="result_placeholder">Result: %s</string>
</resources>