<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/calculator"
        android:background="?colorPrimary"
        app:titleTextColor="?colorOnPrimary" />
    <EditText
        android:id="@+id/inputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:enabled="false" />
    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginHorizontal="@dimen/margin_horizontal" />

    <GridLayout
        android:layout_marginTop="@dimen/margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="7"
        android:columnCount="4">
        <Button
            android:id="@+id/oneBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:tag="1"
            android:text="@string/one"/>
        <Button
            android:id="@+id/twoBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:tag="2"
            android:text="@string/two"/>
        <Button
            android:id="@+id/threeBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:tag="3"
            android:text="@string/three"/>
        <Button
            android:id="@+id/fourBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:tag="4"
            android:text="@string/four"/>
        <Button
            android:id="@+id/fiveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:tag="5"
            android:text="@string/five"/>
        <Button
            android:id="@+id/sixBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:tag="6"
            android:text="@string/six"/>
        <Button
            android:id="@+id/sevenBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:tag="7"
            android:text="@string/seven" />
        <Button
            android:id="@+id/eightBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:tag="8"
            android:text="@string/eight" />
        <Button
            android:id="@+id/nineBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:tag="9"
            android:text="@string/nine" />

        <Button
            android:id="@+id/zeroBTN"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:tag="0"
            android:text="@string/zero" />

        <Button
            android:id="@+id/equalBTN"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="@string/equal" />

        <Button
            android:id="@+id/resetBTN"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:text="@string/reset" />
        <Button
            android:id="@+id/divBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:tag="/"
            android:text="@string/div" />
        <Button
            android:id="@+id/multBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:tag="*"
            android:text="@string/mult" />
        <Button
            android:id="@+id/minusBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:tag="-"
            android:text="@string/minus" />

        <Button
            android:id="@+id/plusBTN"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_row="3"
            android:layout_rowSpan="3"
            android:layout_column="3"
            android:tag="+"
            android:text="@string/plus" />

    </GridLayout>


</LinearLayout>